<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="right"
    tools:context="com.example.proyectoestacionamiento.Sing_Up">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        android:src="@drawable/login_design" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="386dp"
        android:layout_height="674dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/textNombre"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="103dp" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/textApellido"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="184dp" />

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/textCorreo"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="254dp" />

        <EditText
            android:id="@+id/editTextContraseña"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="320dp" />

        <EditText
            android:id="@+id/editTextRepetirContraseña"

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="Repetir password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnPaypal"
            android:layout_width="80dp"
            android:layout_height="71dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/paypall"
            android:onClick="btnPaypalClick"
            android:padding="20dp" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Paypal"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxTerminos"
            android:layout_width="244dp"
            android:layout_height="47dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="ternimosClick"
            android:text="@string/TerminosYCondiciones"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/btContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="96dp"
            android:background="@drawable/round_corner_buttom"
            android:padding="15dp"
            android:text="@string/BotonContinuar"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTerminos"
            app:layout_constraintVertical_bias="0.0" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/TituloIniciarSesion"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>