<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.proyectoestacionamiento.VentanaDeCostos">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/moneydesign"
        android:layout_weight="4"
        android:scaleType="centerCrop">

    </ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="572dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="127dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cobro" />

        <TextView
            android:id="@+id/textvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Total"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textvPrecioHora" />

        <TextView
            android:id="@+id/textvPrecioHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/PrecioHora"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textvTiempoTranscurrido" />

        <TextView
            android:id="@+id/textvTiempoTranscurrido"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textvTiempo" />

        <TextView
            android:id="@+id/textvTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:text="@string/Tiempo_Transcurrido"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/btAgain"
            android:layout_width="198dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner_buttom"
            android:text="Realizar Nuevo Escaneo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textvTotal" />

        <Button
            android:id="@+id/btnSalir"
            android:background="@drawable/round_corner_buttom"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Salir" />


    </LinearLayout>


</RelativeLayout>